--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<h1 class="title"> {{title}} </h1>
-<app-input-button-unit></app-input-button-unit>
-<ul>
-  <li *ngFor="let todo of todoList">
-   {{todo.title }}
-  </li>
-</ul>
+<h1 class="app-title"> {{title}} </h1>
+<app-list-manager></app-list-manager>
