--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -1,3 +1,6 @@
 <div class="todo-item">
   {{ item.title }}
+  <button class="btn btn-red" (click)="removeItem()">
+      remove
+    </button>
 </div>
